# asm-mapping

./: .gitignore  .gitmodules  README.md  pyproject.toml
notebooks/: 1.0-fp-dataset-exploration.ipynb  2.0-fp-get-model-predictions.ipynb
src/asm_mapping/data/: __init__.py  compute_stats.py  dataset_mode.py  fusion_dataset.py  planetscope_dataset.py  ps_normalization.yaml  s1_normalization.yaml  sentinel1_dataset.py
src/asm_mapping/data/create_spatial_splits/: blocking.py  reader.py  spatial_splits.py  spatial_splits_config.yaml  utils.py
src/asm_mapping/models/: __init__.py  lit_model_ef.py  lit_model_lf.py  lit_model_standalone.py
src/asm_mapping/optimization/: hyperopt.py  hyperopt_config.yaml
src/asm_mapping/train_test_predict/: config.yaml  main.py  test_model.py  train_model.py  train_test_split.py  utils.py
src/asm_mapping/train_test_predict/config/: test_config.yaml  train_config.yaml
src/asm_mapping/utils/: crop_images.sh
tests/: lit_model_standalone_test.py  planetscope_dataset_test.py  sentinel1_dataset_test.py  tests_config.yaml
